--- a/action.yml
+++ b/action.yml
@@ -13,8 +13,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - run: npm i @actions/core miniprogram-ci
+    - run: npm i --production
       shell: bash
       working-directory: ${{github.action_path}}
-    - run: node ${{github.action_path}}/dist
+    - run: node dist
       shell: bash
+      working-directory: ${{github.action_path}}
