--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 name: 'Publish'
 description: 'Publish a WeChat miniprogram'
 inputs:
+  project-path:
+    description: The root directory of WeChat miniprogram.
   ssh-key:
     description: >
       SSH key used to upload the miniprogram.
@@ -15,7 +17,7 @@ runs:
   steps:
     - run: npm i --production
       shell: bash
-      working-directory: ${{github.action_path}}
+      working-directory: ${{ github.action_path }}
     - run: node dist
       shell: bash
-      working-directory: ${{github.action_path}}
+      working-directory: ${{ github.action_path }}
